--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint --dir src",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@types/node": "20.3.0",
@@ -35,10 +36,12 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.(tsx|js)": "eslint --cache --fix",
+    "*": "prettier --write --ignore-unknown"
   }
 }
